# SmartBatch

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.examples/: README.md  requirements.txt  resnet_client.py  resnet_server.py
.github/workflows/: ci.yml  publish.yml
examples/: 01_simple_batching.py  02_multi_model_registry.py  03_validation_and_reliability.py  04_multi_gpu_workers.py  05_adaptive_batching.py
scripts/: comparison_plot.py  production_benchmark.py  stress_test_plot.py  study_params.py
smartbatch/: __init__.py  api.py  batching.py  decorator.py  exceptions.py  main.py  metrics.py  model.py  registry.py
tests/: README.md  locustfile.py  resnet_baseline_vs_smartbatch.py  resnet_stress_cumulative.py  test_syntax_and_behavior.py
