[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smartbatch"
version = "0.1.2"
description = "High-throughput ML inference middleware with dynamic batching"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Veera Karthick", email = "veerakarthick09@gmail.com"}
]
dependencies = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "pydantic>=2.0.0",
    "prometheus_client>=0.17.0",
    "msgpack>=1.0.0",
    "torch>=2.0.0",
    "numpy>=1.21.0",
]



[tool.setuptools.packages.find]
where = ["."]
include = ["smartbatch*"]
